parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AUTO
    BREAK
    CASE
    CONST
    CONTINUE
    CORDER
    CORIZQ
    DEFAULT
    GOTO
    PRINT
    PUNTO
    REGISTER
    RETURN
    SCAN
    SIZE
    STRUCT
    SWITCH

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> declaracion
Rule 5     instruccion -> main
Rule 6     instruccion -> metodo
Rule 7     instruccion -> error PYCOMA
Rule 8     instruccion -> error LLAVEDER
Rule 9     declaracion -> tipo declaraciones PYCOMA
Rule 10    declaraciones -> declaraciones COMA decla
Rule 11    declaraciones -> decla
Rule 12    decla -> ID IGUAL operacion
Rule 13    decla -> ID
Rule 14    main -> INTEGER MAIN PARIZQ PARDER LLAVEIZQ sentencias LLAVEDER
Rule 15    metodo -> VOID ID PARIZQ PARDER LLAVEIZQ sentencias LLAVEDER
Rule 16    metodo -> VOID ID PARIZQ parametros PARDER LLAVEIZQ sentencias LLAVEDER
Rule 17    parametros -> parametros COMA parametro
Rule 18    parametros -> parametro
Rule 19    parametro -> tipo ID
Rule 20    funcion -> tipo ID PARIZQ PARDER LLAVEIZQ sentencias LLAVEDER
Rule 21    funcion -> tipo ID PARIZQ parametros PARDER LLAVEIZQ sentencias LLAVEDER
Rule 22    sentencias -> sentencias sentencia
Rule 23    sentencias -> sentencia
Rule 24    sentencia -> declaracion
Rule 25    sentencia -> asignacion
Rule 26    sentencia -> if
Rule 27    sentencia -> while
Rule 28    sentencia -> for
Rule 29    sentencia -> do_while
Rule 30    sentencia -> error PYCOMA
Rule 31    sentencia -> error LLAVEDER
Rule 32    asignacion -> ID IGUAL operacion PYCOMA
Rule 33    asignacion -> ID tipo_asignacion PYCOMA
Rule 34    tipo_asignacion -> MASIGUAL operacion
Rule 35    tipo_asignacion -> MENOSIGUAL operacion
Rule 36    tipo_asignacion -> ASTERISCOIGUAL operacion
Rule 37    tipo_asignacion -> BARRAIGUAL operacion
Rule 38    tipo_asignacion -> MODULARIGUAL operacion
Rule 39    tipo_asignacion -> SHIFTDERIGUAL operacion
Rule 40    tipo_asignacion -> SHIFTIZQIGUAL operacion
Rule 41    tipo_asignacion -> ANDIGUAL operacion
Rule 42    tipo_asignacion -> ORIGUAL operacion
Rule 43    tipo_asignacion -> XORIGUAL operacion
Rule 44    if -> IF PARIZQ operacion PARDER LLAVEIZQ sentencias LLAVEDER
Rule 45    if -> IF PARIZQ operacion PARDER LLAVEIZQ sentencias LLAVEDER ELSE LLAVEIZQ sentencias LLAVEDER
Rule 46    if -> IF PARIZQ operacion PARDER LLAVEIZQ sentencias LLAVEDER else_if
Rule 47    else_if -> else_if elif
Rule 48    else_if -> elif
Rule 49    elif -> ELSE IF PARIZQ operacion PARDER LLAVEIZQ sentencias LLAVEDER
Rule 50    if -> IF PARIZQ operacion PARDER LLAVEIZQ sentencias LLAVEDER else_if ELSE LLAVEIZQ sentencias LLAVEDER
Rule 51    while -> WHILE PARIZQ operacion PARDER LLAVEIZQ sentencias LLAVEDER
Rule 52    do_while -> DO LLAVEIZQ sentencias LLAVEDER WHILE PARIZQ operacion PARDER PYCOMA
Rule 53    for -> FOR PARIZQ inicializacion PYCOMA operacion PYCOMA incremento PARDER LLAVEIZQ sentencias LLAVEDER
Rule 54    inicializacion -> tipo ID IGUAL operacion
Rule 55    inicializacion -> ID IGUAL operacion
Rule 56    incremento -> ID MENOS MENOS
Rule 57    incremento -> ID tipo_asignacion
Rule 58    operacion -> operacion AND operacion
Rule 59    operacion -> operacion OR operacion
Rule 60    operacion -> operacion IGUALIGUAL operacion
Rule 61    operacion -> operacion DIFERENTE operacion
Rule 62    operacion -> operacion MAYOR operacion
Rule 63    operacion -> operacion MENOR operacion
Rule 64    operacion -> operacion MAYORIGUAL operacion
Rule 65    operacion -> operacion MENORIGUAL operacion
Rule 66    operacion -> operacion ANDBIT operacion
Rule 67    operacion -> operacion ORBIT operacion
Rule 68    operacion -> operacion XORBIT operacion
Rule 69    operacion -> operacion SHIFTIZQ operacion
Rule 70    operacion -> operacion SHIFTDER operacion
Rule 71    operacion -> operacion MAS operacion
Rule 72    operacion -> operacion MENOS operacion
Rule 73    operacion -> operacion MULTIPLICACION operacion
Rule 74    operacion -> operacion DIVISION operacion
Rule 75    operacion -> operacion MODULAR operacion
Rule 76    operacion -> operacion INTERROGACION operacion DOSPUNTOS operacion
Rule 77    operacion -> MENOS operacion
Rule 78    operacion -> NOT operacion
Rule 79    operacion -> NOTBIT operacion
Rule 80    operacion -> valor
Rule 81    tipo -> INTEGER
Rule 82    tipo -> FLOAT
Rule 83    tipo -> DOUBLE
Rule 84    tipo -> CHAR
Rule 85    tipo -> ID
Rule 86    valor -> ENTERO
Rule 87    valor -> ID
Rule 88    valor -> DECIMAL
Rule 89    valor -> CARACTER
Rule 90    valor -> CADENA

Terminals, with rules where they appear

AND                  : 58
ANDBIT               : 66
ANDIGUAL             : 41
ASTERISCOIGUAL       : 36
AUTO                 : 
BARRAIGUAL           : 37
BREAK                : 
CADENA               : 90
CARACTER             : 89
CASE                 : 
CHAR                 : 84
COMA                 : 10 17
CONST                : 
CONTINUE             : 
CORDER               : 
CORIZQ               : 
DECIMAL              : 88
DEFAULT              : 
DIFERENTE            : 61
DIVISION             : 74
DO                   : 52
DOSPUNTOS            : 76
DOUBLE               : 83
ELSE                 : 45 49 50
ENTERO               : 86
FLOAT                : 82
FOR                  : 53
GOTO                 : 
ID                   : 12 13 15 16 19 20 21 32 33 54 55 56 57 85 87
IF                   : 44 45 46 49 50
IGUAL                : 12 32 54 55
IGUALIGUAL           : 60
INTEGER              : 14 81
INTERROGACION        : 76
LLAVEDER             : 8 14 15 16 20 21 31 44 45 45 46 49 50 50 51 52 53
LLAVEIZQ             : 14 15 16 20 21 44 45 45 46 49 50 50 51 52 53
MAIN                 : 14
MAS                  : 71
MASIGUAL             : 34
MAYOR                : 62
MAYORIGUAL           : 64
MENOR                : 63
MENORIGUAL           : 65
MENOS                : 56 56 72 77
MENOSIGUAL           : 35
MODULAR              : 75
MODULARIGUAL         : 38
MULTIPLICACION       : 73
NOT                  : 78
NOTBIT               : 79
OR                   : 59
ORBIT                : 67
ORIGUAL              : 42
PARDER               : 14 15 16 20 21 44 45 46 49 50 51 52 53
PARIZQ               : 14 15 16 20 21 44 45 46 49 50 51 52 53
PRINT                : 
PUNTO                : 
PYCOMA               : 7 9 30 32 33 52 53 53
REGISTER             : 
RETURN               : 
SCAN                 : 
SHIFTDER             : 70
SHIFTDERIGUAL        : 39
SHIFTIZQ             : 69
SHIFTIZQIGUAL        : 40
SIZE                 : 
STRUCT               : 
SWITCH               : 
VOID                 : 15 16
WHILE                : 51 52
XORBIT               : 68
XORIGUAL             : 43
error                : 7 8 30 31

Nonterminals, with rules where they appear

asignacion           : 25
decla                : 10 11
declaracion          : 4 24
declaraciones        : 9 10
do_while             : 29
elif                 : 47 48
else_if              : 46 47 50
for                  : 28
funcion              : 
if                   : 26
incremento           : 53
inicializacion       : 53
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2
main                 : 5
metodo               : 6
operacion            : 12 32 34 35 36 37 38 39 40 41 42 43 44 45 46 49 50 51 52 53 54 55 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 76 77 78 79
parametro            : 17 18
parametros           : 16 17 21
sentencia            : 22 23
sentencias           : 14 15 16 20 21 22 44 45 45 46 49 50 50 51 52 53
tipo                 : 9 19 20 21 54
tipo_asignacion      : 33 57
valor                : 80
while                : 27

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . declaracion
    (5) instruccion -> . main
    (6) instruccion -> . metodo
    (7) instruccion -> . error PYCOMA
    (8) instruccion -> . error LLAVEDER
    (9) declaracion -> . tipo declaraciones PYCOMA
    (14) main -> . INTEGER MAIN PARIZQ PARDER LLAVEIZQ sentencias LLAVEDER
    (15) metodo -> . VOID ID PARIZQ PARDER LLAVEIZQ sentencias LLAVEDER
    (16) metodo -> . VOID ID PARIZQ parametros PARDER LLAVEIZQ sentencias LLAVEDER
    (81) tipo -> . INTEGER
    (82) tipo -> . FLOAT
    (83) tipo -> . DOUBLE
    (84) tipo -> . CHAR
    (85) tipo -> . ID

    error           shift and go to state 7
    INTEGER         shift and go to state 9
    VOID            shift and go to state 10
    FLOAT           shift and go to state 12
    DOUBLE          shift and go to state 13
    CHAR            shift and go to state 14
    ID              shift and go to state 11

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    declaracion                    shift and go to state 4
    main                           shift and go to state 5
    metodo                         shift and go to state 6
    tipo                           shift and go to state 8

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . declaracion
    (5) instruccion -> . main
    (6) instruccion -> . metodo
    (7) instruccion -> . error PYCOMA
    (8) instruccion -> . error LLAVEDER
    (9) declaracion -> . tipo declaraciones PYCOMA
    (14) main -> . INTEGER MAIN PARIZQ PARDER LLAVEIZQ sentencias LLAVEDER
    (15) metodo -> . VOID ID PARIZQ PARDER LLAVEIZQ sentencias LLAVEDER
    (16) metodo -> . VOID ID PARIZQ parametros PARDER LLAVEIZQ sentencias LLAVEDER
    (81) tipo -> . INTEGER
    (82) tipo -> . FLOAT
    (83) tipo -> . DOUBLE
    (84) tipo -> . CHAR
    (85) tipo -> . ID

    $end            reduce using rule 1 (init -> instrucciones .)
    error           shift and go to state 7
    INTEGER         shift and go to state 9
    VOID            shift and go to state 10
    FLOAT           shift and go to state 12
    DOUBLE          shift and go to state 13
    CHAR            shift and go to state 14
    ID              shift and go to state 11

    instruccion                    shift and go to state 15
    declaracion                    shift and go to state 4
    main                           shift and go to state 5
    metodo                         shift and go to state 6
    tipo                           shift and go to state 8

state 3

    (3) instrucciones -> instruccion .

    error           reduce using rule 3 (instrucciones -> instruccion .)
    INTEGER         reduce using rule 3 (instrucciones -> instruccion .)
    VOID            reduce using rule 3 (instrucciones -> instruccion .)
    FLOAT           reduce using rule 3 (instrucciones -> instruccion .)
    DOUBLE          reduce using rule 3 (instrucciones -> instruccion .)
    CHAR            reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> declaracion .

    error           reduce using rule 4 (instruccion -> declaracion .)
    INTEGER         reduce using rule 4 (instruccion -> declaracion .)
    VOID            reduce using rule 4 (instruccion -> declaracion .)
    FLOAT           reduce using rule 4 (instruccion -> declaracion .)
    DOUBLE          reduce using rule 4 (instruccion -> declaracion .)
    CHAR            reduce using rule 4 (instruccion -> declaracion .)
    ID              reduce using rule 4 (instruccion -> declaracion .)
    $end            reduce using rule 4 (instruccion -> declaracion .)


state 5

    (5) instruccion -> main .

    error           reduce using rule 5 (instruccion -> main .)
    INTEGER         reduce using rule 5 (instruccion -> main .)
    VOID            reduce using rule 5 (instruccion -> main .)
    FLOAT           reduce using rule 5 (instruccion -> main .)
    DOUBLE          reduce using rule 5 (instruccion -> main .)
    CHAR            reduce using rule 5 (instruccion -> main .)
    ID              reduce using rule 5 (instruccion -> main .)
    $end            reduce using rule 5 (instruccion -> main .)


state 6

    (6) instruccion -> metodo .

    error           reduce using rule 6 (instruccion -> metodo .)
    INTEGER         reduce using rule 6 (instruccion -> metodo .)
    VOID            reduce using rule 6 (instruccion -> metodo .)
    FLOAT           reduce using rule 6 (instruccion -> metodo .)
    DOUBLE          reduce using rule 6 (instruccion -> metodo .)
    CHAR            reduce using rule 6 (instruccion -> metodo .)
    ID              reduce using rule 6 (instruccion -> metodo .)
    $end            reduce using rule 6 (instruccion -> metodo .)


state 7

    (7) instruccion -> error . PYCOMA
    (8) instruccion -> error . LLAVEDER

    PYCOMA          shift and go to state 16
    LLAVEDER        shift and go to state 17


state 8

    (9) declaracion -> tipo . declaraciones PYCOMA
    (10) declaraciones -> . declaraciones COMA decla
    (11) declaraciones -> . decla
    (12) decla -> . ID IGUAL operacion
    (13) decla -> . ID

    ID              shift and go to state 20

    declaraciones                  shift and go to state 18
    decla                          shift and go to state 19

state 9

    (14) main -> INTEGER . MAIN PARIZQ PARDER LLAVEIZQ sentencias LLAVEDER
    (81) tipo -> INTEGER .

    MAIN            shift and go to state 21
    ID              reduce using rule 81 (tipo -> INTEGER .)


state 10

    (15) metodo -> VOID . ID PARIZQ PARDER LLAVEIZQ sentencias LLAVEDER
    (16) metodo -> VOID . ID PARIZQ parametros PARDER LLAVEIZQ sentencias LLAVEDER

    ID              shift and go to state 22


state 11

    (85) tipo -> ID .

    ID              reduce using rule 85 (tipo -> ID .)


state 12

    (82) tipo -> FLOAT .

    ID              reduce using rule 82 (tipo -> FLOAT .)


state 13

    (83) tipo -> DOUBLE .

    ID              reduce using rule 83 (tipo -> DOUBLE .)


state 14

    (84) tipo -> CHAR .

    ID              reduce using rule 84 (tipo -> CHAR .)


state 15

    (2) instrucciones -> instrucciones instruccion .

    error           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    INTEGER         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    VOID            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    FLOAT           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    DOUBLE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    CHAR            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 16

    (7) instruccion -> error PYCOMA .

    error           reduce using rule 7 (instruccion -> error PYCOMA .)
    INTEGER         reduce using rule 7 (instruccion -> error PYCOMA .)
    VOID            reduce using rule 7 (instruccion -> error PYCOMA .)
    FLOAT           reduce using rule 7 (instruccion -> error PYCOMA .)
    DOUBLE          reduce using rule 7 (instruccion -> error PYCOMA .)
    CHAR            reduce using rule 7 (instruccion -> error PYCOMA .)
    ID              reduce using rule 7 (instruccion -> error PYCOMA .)
    $end            reduce using rule 7 (instruccion -> error PYCOMA .)


state 17

    (8) instruccion -> error LLAVEDER .

    error           reduce using rule 8 (instruccion -> error LLAVEDER .)
    INTEGER         reduce using rule 8 (instruccion -> error LLAVEDER .)
    VOID            reduce using rule 8 (instruccion -> error LLAVEDER .)
    FLOAT           reduce using rule 8 (instruccion -> error LLAVEDER .)
    DOUBLE          reduce using rule 8 (instruccion -> error LLAVEDER .)
    CHAR            reduce using rule 8 (instruccion -> error LLAVEDER .)
    ID              reduce using rule 8 (instruccion -> error LLAVEDER .)
    $end            reduce using rule 8 (instruccion -> error LLAVEDER .)


state 18

    (9) declaracion -> tipo declaraciones . PYCOMA
    (10) declaraciones -> declaraciones . COMA decla

    PYCOMA          shift and go to state 23
    COMA            shift and go to state 24


state 19

    (11) declaraciones -> decla .

    PYCOMA          reduce using rule 11 (declaraciones -> decla .)
    COMA            reduce using rule 11 (declaraciones -> decla .)


state 20

    (12) decla -> ID . IGUAL operacion
    (13) decla -> ID .

    IGUAL           shift and go to state 25
    PYCOMA          reduce using rule 13 (decla -> ID .)
    COMA            reduce using rule 13 (decla -> ID .)


state 21

    (14) main -> INTEGER MAIN . PARIZQ PARDER LLAVEIZQ sentencias LLAVEDER

    PARIZQ          shift and go to state 26


state 22

    (15) metodo -> VOID ID . PARIZQ PARDER LLAVEIZQ sentencias LLAVEDER
    (16) metodo -> VOID ID . PARIZQ parametros PARDER LLAVEIZQ sentencias LLAVEDER

    PARIZQ          shift and go to state 27


state 23

    (9) declaracion -> tipo declaraciones PYCOMA .

    error           reduce using rule 9 (declaracion -> tipo declaraciones PYCOMA .)
    INTEGER         reduce using rule 9 (declaracion -> tipo declaraciones PYCOMA .)
    VOID            reduce using rule 9 (declaracion -> tipo declaraciones PYCOMA .)
    FLOAT           reduce using rule 9 (declaracion -> tipo declaraciones PYCOMA .)
    DOUBLE          reduce using rule 9 (declaracion -> tipo declaraciones PYCOMA .)
    CHAR            reduce using rule 9 (declaracion -> tipo declaraciones PYCOMA .)
    ID              reduce using rule 9 (declaracion -> tipo declaraciones PYCOMA .)
    $end            reduce using rule 9 (declaracion -> tipo declaraciones PYCOMA .)
    LLAVEDER        reduce using rule 9 (declaracion -> tipo declaraciones PYCOMA .)
    IF              reduce using rule 9 (declaracion -> tipo declaraciones PYCOMA .)
    WHILE           reduce using rule 9 (declaracion -> tipo declaraciones PYCOMA .)
    FOR             reduce using rule 9 (declaracion -> tipo declaraciones PYCOMA .)
    DO              reduce using rule 9 (declaracion -> tipo declaraciones PYCOMA .)


state 24

    (10) declaraciones -> declaraciones COMA . decla
    (12) decla -> . ID IGUAL operacion
    (13) decla -> . ID

    ID              shift and go to state 20

    decla                          shift and go to state 28

state 25

    (12) decla -> ID IGUAL . operacion
    (58) operacion -> . operacion AND operacion
    (59) operacion -> . operacion OR operacion
    (60) operacion -> . operacion IGUALIGUAL operacion
    (61) operacion -> . operacion DIFERENTE operacion
    (62) operacion -> . operacion MAYOR operacion
    (63) operacion -> . operacion MENOR operacion
    (64) operacion -> . operacion MAYORIGUAL operacion
    (65) operacion -> . operacion MENORIGUAL operacion
    (66) operacion -> . operacion ANDBIT operacion
    (67) operacion -> . operacion ORBIT operacion
    (68) operacion -> . operacion XORBIT operacion
    (69) operacion -> . operacion SHIFTIZQ operacion
    (70) operacion -> . operacion SHIFTDER operacion
    (71) operacion -> . operacion MAS operacion
    (72) operacion -> . operacion MENOS operacion
    (73) operacion -> . operacion MULTIPLICACION operacion
    (74) operacion -> . operacion DIVISION operacion
    (75) operacion -> . operacion MODULAR operacion
    (76) operacion -> . operacion INTERROGACION operacion DOSPUNTOS operacion
    (77) operacion -> . MENOS operacion
    (78) operacion -> . NOT operacion
    (79) operacion -> . NOTBIT operacion
    (80) operacion -> . valor
    (86) valor -> . ENTERO
    (87) valor -> . ID
    (88) valor -> . DECIMAL
    (89) valor -> . CARACTER
    (90) valor -> . CADENA

    MENOS           shift and go to state 31
    NOT             shift and go to state 32
    NOTBIT          shift and go to state 33
    ENTERO          shift and go to state 35
    ID              shift and go to state 29
    DECIMAL         shift and go to state 36
    CARACTER        shift and go to state 37
    CADENA          shift and go to state 38

    operacion                      shift and go to state 30
    valor                          shift and go to state 34

state 26

    (14) main -> INTEGER MAIN PARIZQ . PARDER LLAVEIZQ sentencias LLAVEDER

    PARDER          shift and go to state 39


state 27

    (15) metodo -> VOID ID PARIZQ . PARDER LLAVEIZQ sentencias LLAVEDER
    (16) metodo -> VOID ID PARIZQ . parametros PARDER LLAVEIZQ sentencias LLAVEDER
    (17) parametros -> . parametros COMA parametro
    (18) parametros -> . parametro
    (19) parametro -> . tipo ID
    (81) tipo -> . INTEGER
    (82) tipo -> . FLOAT
    (83) tipo -> . DOUBLE
    (84) tipo -> . CHAR
    (85) tipo -> . ID

    PARDER          shift and go to state 40
    INTEGER         shift and go to state 44
    FLOAT           shift and go to state 12
    DOUBLE          shift and go to state 13
    CHAR            shift and go to state 14
    ID              shift and go to state 11

    parametros                     shift and go to state 41
    parametro                      shift and go to state 42
    tipo                           shift and go to state 43

state 28

    (10) declaraciones -> declaraciones COMA decla .

    PYCOMA          reduce using rule 10 (declaraciones -> declaraciones COMA decla .)
    COMA            reduce using rule 10 (declaraciones -> declaraciones COMA decla .)


state 29

    (87) valor -> ID .

    AND             reduce using rule 87 (valor -> ID .)
    OR              reduce using rule 87 (valor -> ID .)
    IGUALIGUAL      reduce using rule 87 (valor -> ID .)
    DIFERENTE       reduce using rule 87 (valor -> ID .)
    MAYOR           reduce using rule 87 (valor -> ID .)
    MENOR           reduce using rule 87 (valor -> ID .)
    MAYORIGUAL      reduce using rule 87 (valor -> ID .)
    MENORIGUAL      reduce using rule 87 (valor -> ID .)
    ANDBIT          reduce using rule 87 (valor -> ID .)
    ORBIT           reduce using rule 87 (valor -> ID .)
    XORBIT          reduce using rule 87 (valor -> ID .)
    SHIFTIZQ        reduce using rule 87 (valor -> ID .)
    SHIFTDER        reduce using rule 87 (valor -> ID .)
    MAS             reduce using rule 87 (valor -> ID .)
    MENOS           reduce using rule 87 (valor -> ID .)
    MULTIPLICACION  reduce using rule 87 (valor -> ID .)
    DIVISION        reduce using rule 87 (valor -> ID .)
    MODULAR         reduce using rule 87 (valor -> ID .)
    INTERROGACION   reduce using rule 87 (valor -> ID .)
    PYCOMA          reduce using rule 87 (valor -> ID .)
    COMA            reduce using rule 87 (valor -> ID .)
    DOSPUNTOS       reduce using rule 87 (valor -> ID .)
    PARDER          reduce using rule 87 (valor -> ID .)


state 30

    (12) decla -> ID IGUAL operacion .
    (58) operacion -> operacion . AND operacion
    (59) operacion -> operacion . OR operacion
    (60) operacion -> operacion . IGUALIGUAL operacion
    (61) operacion -> operacion . DIFERENTE operacion
    (62) operacion -> operacion . MAYOR operacion
    (63) operacion -> operacion . MENOR operacion
    (64) operacion -> operacion . MAYORIGUAL operacion
    (65) operacion -> operacion . MENORIGUAL operacion
    (66) operacion -> operacion . ANDBIT operacion
    (67) operacion -> operacion . ORBIT operacion
    (68) operacion -> operacion . XORBIT operacion
    (69) operacion -> operacion . SHIFTIZQ operacion
    (70) operacion -> operacion . SHIFTDER operacion
    (71) operacion -> operacion . MAS operacion
    (72) operacion -> operacion . MENOS operacion
    (73) operacion -> operacion . MULTIPLICACION operacion
    (74) operacion -> operacion . DIVISION operacion
    (75) operacion -> operacion . MODULAR operacion
    (76) operacion -> operacion . INTERROGACION operacion DOSPUNTOS operacion

    PYCOMA          reduce using rule 12 (decla -> ID IGUAL operacion .)
    COMA            reduce using rule 12 (decla -> ID IGUAL operacion .)
    AND             shift and go to state 45
    OR              shift and go to state 46
    IGUALIGUAL      shift and go to state 47
    DIFERENTE       shift and go to state 48
    MAYOR           shift and go to state 49
    MENOR           shift and go to state 50
    MAYORIGUAL      shift and go to state 51
    MENORIGUAL      shift and go to state 52
    ANDBIT          shift and go to state 53
    ORBIT           shift and go to state 54
    XORBIT          shift and go to state 55
    SHIFTIZQ        shift and go to state 56
    SHIFTDER        shift and go to state 57
    MAS             shift and go to state 58
    MENOS           shift and go to state 59
    MULTIPLICACION  shift and go to state 60
    DIVISION        shift and go to state 61
    MODULAR         shift and go to state 62
    INTERROGACION   shift and go to state 63


state 31

    (77) operacion -> MENOS . operacion
    (58) operacion -> . operacion AND operacion
    (59) operacion -> . operacion OR operacion
    (60) operacion -> . operacion IGUALIGUAL operacion
    (61) operacion -> . operacion DIFERENTE operacion
    (62) operacion -> . operacion MAYOR operacion
    (63) operacion -> . operacion MENOR operacion
    (64) operacion -> . operacion MAYORIGUAL operacion
    (65) operacion -> . operacion MENORIGUAL operacion
    (66) operacion -> . operacion ANDBIT operacion
    (67) operacion -> . operacion ORBIT operacion
    (68) operacion -> . operacion XORBIT operacion
    (69) operacion -> . operacion SHIFTIZQ operacion
    (70) operacion -> . operacion SHIFTDER operacion
    (71) operacion -> . operacion MAS operacion
    (72) operacion -> . operacion MENOS operacion
    (73) operacion -> . operacion MULTIPLICACION operacion
    (74) operacion -> . operacion DIVISION operacion
    (75) operacion -> . operacion MODULAR operacion
    (76) operacion -> . operacion INTERROGACION operacion DOSPUNTOS operacion
    (77) operacion -> . MENOS operacion
    (78) operacion -> . NOT operacion
    (79) operacion -> . NOTBIT operacion
    (80) operacion -> . valor
    (86) valor -> . ENTERO
    (87) valor -> . ID
    (88) valor -> . DECIMAL
    (89) valor -> . CARACTER
    (90) valor -> . CADENA

    MENOS           shift and go to state 31
    NOT             shift and go to state 32
    NOTBIT          shift and go to state 33
    ENTERO          shift and go to state 35
    ID              shift and go to state 29
    DECIMAL         shift and go to state 36
    CARACTER        shift and go to state 37
    CADENA          shift and go to state 38

    operacion                      shift and go to state 64
    valor                          shift and go to state 34

state 32

    (78) operacion -> NOT . operacion
    (58) operacion -> . operacion AND operacion
    (59) operacion -> . operacion OR operacion
    (60) operacion -> . operacion IGUALIGUAL operacion
    (61) operacion -> . operacion DIFERENTE operacion
    (62) operacion -> . operacion MAYOR operacion
    (63) operacion -> . operacion MENOR operacion
    (64) operacion -> . operacion MAYORIGUAL operacion
    (65) operacion -> . operacion MENORIGUAL operacion
    (66) operacion -> . operacion ANDBIT operacion
    (67) operacion -> . operacion ORBIT operacion
    (68) operacion -> . operacion XORBIT operacion
    (69) operacion -> . operacion SHIFTIZQ operacion
    (70) operacion -> . operacion SHIFTDER operacion
    (71) operacion -> . operacion MAS operacion
    (72) operacion -> . operacion MENOS operacion
    (73) operacion -> . operacion MULTIPLICACION operacion
    (74) operacion -> . operacion DIVISION operacion
    (75) operacion -> . operacion MODULAR operacion
    (76) operacion -> . operacion INTERROGACION operacion DOSPUNTOS operacion
    (77) operacion -> . MENOS operacion
    (78) operacion -> . NOT operacion
    (79) operacion -> . NOTBIT operacion
    (80) operacion -> . valor
    (86) valor -> . ENTERO
    (87) valor -> . ID
    (88) valor -> . DECIMAL
    (89) valor -> . CARACTER
    (90) valor -> . CADENA

    MENOS           shift and go to state 31
    NOT             shift and go to state 32
    NOTBIT          shift and go to state 33
    ENTERO          shift and go to state 35
    ID              shift and go to state 29
    DECIMAL         shift and go to state 36
    CARACTER        shift and go to state 37
    CADENA          shift and go to state 38

    operacion                      shift and go to state 65
    valor                          shift and go to state 34

state 33

    (79) operacion -> NOTBIT . operacion
    (58) operacion -> . operacion AND operacion
    (59) operacion -> . operacion OR operacion
    (60) operacion -> . operacion IGUALIGUAL operacion
    (61) operacion -> . operacion DIFERENTE operacion
    (62) operacion -> . operacion MAYOR operacion
    (63) operacion -> . operacion MENOR operacion
    (64) operacion -> . operacion MAYORIGUAL operacion
    (65) operacion -> . operacion MENORIGUAL operacion
    (66) operacion -> . operacion ANDBIT operacion
    (67) operacion -> . operacion ORBIT operacion
    (68) operacion -> . operacion XORBIT operacion
    (69) operacion -> . operacion SHIFTIZQ operacion
    (70) operacion -> . operacion SHIFTDER operacion
    (71) operacion -> . operacion MAS operacion
    (72) operacion -> . operacion MENOS operacion
    (73) operacion -> . operacion MULTIPLICACION operacion
    (74) operacion -> . operacion DIVISION operacion
    (75) operacion -> . operacion MODULAR operacion
    (76) operacion -> . operacion INTERROGACION operacion DOSPUNTOS operacion
    (77) operacion -> . MENOS operacion
    (78) operacion -> . NOT operacion
    (79) operacion -> . NOTBIT operacion
    (80) operacion -> . valor
    (86) valor -> . ENTERO
    (87) valor -> . ID
    (88) valor -> . DECIMAL
    (89) valor -> . CARACTER
    (90) valor -> . CADENA

    MENOS           shift and go to state 31
    NOT             shift and go to state 32
    NOTBIT          shift and go to state 33
    ENTERO          shift and go to state 35
    ID              shift and go to state 29
    DECIMAL         shift and go to state 36
    CARACTER        shift and go to state 37
    CADENA          shift and go to state 38

    operacion                      shift and go to state 66
    valor                          shift and go to state 34

state 34

    (80) operacion -> valor .

    AND             reduce using rule 80 (operacion -> valor .)
    OR              reduce using rule 80 (operacion -> valor .)
    IGUALIGUAL      reduce using rule 80 (operacion -> valor .)
    DIFERENTE       reduce using rule 80 (operacion -> valor .)
    MAYOR           reduce using rule 80 (operacion -> valor .)
    MENOR           reduce using rule 80 (operacion -> valor .)
    MAYORIGUAL      reduce using rule 80 (operacion -> valor .)
    MENORIGUAL      reduce using rule 80 (operacion -> valor .)
    ANDBIT          reduce using rule 80 (operacion -> valor .)
    ORBIT           reduce using rule 80 (operacion -> valor .)
    XORBIT          reduce using rule 80 (operacion -> valor .)
    SHIFTIZQ        reduce using rule 80 (operacion -> valor .)
    SHIFTDER        reduce using rule 80 (operacion -> valor .)
    MAS             reduce using rule 80 (operacion -> valor .)
    MENOS           reduce using rule 80 (operacion -> valor .)
    MULTIPLICACION  reduce using rule 80 (operacion -> valor .)
    DIVISION        reduce using rule 80 (operacion -> valor .)
    MODULAR         reduce using rule 80 (operacion -> valor .)
    INTERROGACION   reduce using rule 80 (operacion -> valor .)
    PYCOMA          reduce using rule 80 (operacion -> valor .)
    COMA            reduce using rule 80 (operacion -> valor .)
    DOSPUNTOS       reduce using rule 80 (operacion -> valor .)
    PARDER          reduce using rule 80 (operacion -> valor .)


state 35

    (86) valor -> ENTERO .
